--- a/smithery.yaml
+++ b/smithery.yaml
@@ -3,6 +3,8 @@ version: 0.1.0
 description: YÖK Akademik scraping MCP
 entrypoint: mcp_tools.py
 runtime: python
+port: 8001
+health_check: /health
 tools:
   - search_researcher
   - get_collaborators 
