Node.js MCP server - Smithery uyumlu basit HTTP server

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,5 +1,5 @@
 name: yok-akademik-mcp
 version: 0.1.0
 description: YÖK Akademik scraping MCP
-entrypoint: mcp_tools.py
-runtime: python 
+entrypoint: mcp-server-smithery.js
+runtime: node 
