--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cmdk": "1.0.4",
     "date-fns": "^2.28.0",
     "embla-carousel-react": "8.5.1",
+    "express": "^4.18.2",
     "framer-motion": "^12.23.0",
     "input-otp": "1.4.1",
     "is-number": "^7.0.0",
